<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/edit_post"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <EditText
        android:id="@+id/post_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:inputType="text"
        android:textSize="16sp" />

    <!-- Button -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="end"
        android:orientation="horizontal">

        <!-- Dismiss Button -->
        <Button
            android:id="@+id/action_dismiss"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dismiss"
            android:textAlignment="viewEnd"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <!-- Apply Button -->
        <Button
            android:id="@+id/action_update"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:textAlignment="viewEnd"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    </LinearLayout>

</LinearLayout>